--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@material-ui/core": "4.11.3",
     "@material-ui/icons": "4.11.2",
     "@material-ui/lab": "4.0.0-alpha.57",
+    "axios": "^0.27.2",
+    "bigchaindb-driver": "^4.3.0",
     "chart.js": "2.9.4",
     "node-sass": "5.0.0",
     "nouislider": "14.6.3",
